--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>To Do List 2</h1>
            </header>
            <main style="min-height: 500px; min-width: 500px" class="col-12 mt-4">
-            <input type="text" id="maintext" class="bg-warning rounded-pill" placeholder="  New Task"  /> 
+            <input type="text" id="maintext" class="bg-warning rounded-pill" placeholder="  New Task" value=""  /> 
             <span> 
                 <button class="bg-success text-white rounded-pill" id="addbtn">ADD</button>
             </span>
