made edit btn working

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container text-center bg-dark text-white">
         <div class="row">
            <header class="col-12 header mt-4">
-            <h1>To Do List 2</h1>
+            <h1>My Todo List</h1>
            </header>
            <main style="min-height: 500px; min-width: 500px" class="col-12 mt-4">
             <input type="text" id="maintext" class="bg-warning rounded-pill" placeholder="  New Task" value=""  /> 
@@ -25,7 +25,7 @@
             <div id="tasks">
             </div>
            </main>
-           <footer class="col-12 mt-4">Made by Alex,Clirim,Cheng Lin,Svjetlana.</footer>
+           <footer class="col-12 mt-4">Made by Alex, Clirim, Cheng Lin, Svjetlana. 2022 ❤️</footer>
         </div>
     </div>
     <script src="script.js"></script>
