--- a/index.html
+++ b/index.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To do list 2</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My ToDo List</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
     <div class="container text-center bg-dark text-white">
-        <div class="row">
-           <header class="col-12 header mt-4">
-            <h1>My Todo List</h1>
-           </header>
-           <main style="min-height: 500px; min-width: 500px" class="col-12 mt-4">
-            <input type="text" id="maintext" class="bg-warning rounded-pill" placeholder="  New Task" value=""  /> 
-            <span> 
-                <button class="bg-success text-white rounded-pill" id="addbtn">ADD</button>
+      <div class="row">
+        <header class="col-12 header mt-4">
+          <h1>My ToDo List</h1>
+        </header>
+        <main class="col-12 mt-4">
+          <div>
+            <input
+              type="text"
+              id="maintext"
+              class="bg-warning rounded"
+              placeholder="  New Task"
+              value=""
+            />
+            <span>
+              <button
+                class="bg-success text-white rounded-pill ms-2"
+                id="addbtn"
+              >
+                ADD
+              </button>
             </span>
-            <h5 class="mt-4"><i> Tasks </i></h5>
+            <h5 class="mt-4 text-secondary"><i> Tasks </i></h5>
+          </div>
 
-
-            <div id="tasks">
-            </div>
-           </main>
-           <footer class="col-12 mt-4">Made by Alex, Clirim, Cheng Lin, Svjetlana. 2022 ❤️</footer>
-        </div>
+          <div id="tasks">
+          </div>
+        </main>
+        <footer class="col-12 mt-4 text-secondary pb-3">
+          Made by Alex, Clirim, Cheng Lin, Svjetlana. 2022 ❤️
+        </footer>
+      </div>
     </div>
     <script src="script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
