--- a/index.html
+++ b/index.html
@@ -25,25 +25,28 @@
             <input
               type="text"
               id="maintext"
-              class="bg-warning rounded"
+              class="bg-warning rounded fs-6"
               placeholder="  New Task"
               value=""
             />
             <span>
               <button
-                class="bg-success text-white rounded-pill ms-2"
+                class="btn bg-success text-white rounded-pill ms-2"
                 id="addbtn"
               >
                 ADD
+              </button>
+              <button class="btn btn-sm clear btn-danger rounded-pill ms-4">
+                CLEAR LIST
               </button>
             </span>
             <h5 class="mt-4 text-secondary"><i> Tasks </i></h5>
           </div>
 
-          <div id="tasks">
-          </div>
+          <div id="tasks"></div>
         </main>
-        <footer class="col-12 mt-4 text-secondary pb-3">
+
+        <footer class="col-12 mt-4 text-secondary pb-2">
           Made by Alex, Clirim, Cheng Lin, Svjetlana. 2022 ❤️
         </footer>
       </div>
